# vacuna

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
COLLABORATE/: index.html
docs/: COLLABORATE.md  README.md  refs.md
examples/: cli.py
refs/: index.html
search/: search_index.json
tests/: conftest.py  test_factory.py  test_names.py  test_singleton.py
vacuna/: __init__.py  lazy.py
